# CPP_QT_TPminiprojet

./: CMakeLists.txt  README.md  ReadMe  assets.qrc
assets/data/: scores.csv
src/: Ennemy.cpp  Ennemy.h  MainWindow.cpp  Missile.cpp  Missile.h  MyScene.cpp  MyScene.h  ScoreBoard.cpp  ScoreBoard.h  StartScreen.cpp  StartScreen.h  main.cpp
